create kafka topic and user
Signed-off-by: okozachenko <okozachenko@vexxhost.com>

--- a/roles/barbican/meta/main.yml
+++ b/roles/barbican/meta/main.yml
@@ -35,6 +35,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: barbican
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: barbican
+      oslo_messaging_notifications_user_name: barbican
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ barbican_helm_chart_path }}"
