--- a/roles/barbican/vars/main.yml
+++ b/roles/barbican/vars/main.yml
@@ -28,8 +28,7 @@ _barbican_helm_values:
         max_overflow: 50
         max_pool_size: 5
         pool_timeout: 30
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       simple_crypto_plugin:
         kek: "{{ barbican_kek }}"
     simple_crypto_kek_rewrap:
