--- a/roles/cinder/vars/main.yml
+++ b/roles/cinder/vars/main.yml
@@ -56,8 +56,7 @@ __cinder_helm_values:
         max_overflow: 50
         max_pool_size: 5
         pool_timeout: 30
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       privsep_osbrick:
         helper_command: sudo cinder-rootwrap /etc/cinder/rootwrap.conf privsep-helper --config-file /etc/cinder/cinder.conf
   manifests:
