--- a/roles/glance/vars/main.yml
+++ b/roles/glance/vars/main.yml
@@ -50,8 +50,7 @@ _glance_helm_values:
         pool_timeout: 30
       image_format:
         disk_formats: aki,ari,qcow2,raw
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
   manifests:
     ingress_api: false
     service_ingress_api: false
