--- a/roles/heat/vars/main.yml
+++ b/roles/heat/vars/main.yml
@@ -48,8 +48,7 @@ _heat_helm_values:
         workers: 8
       heat_api_cloudwatch:
         workers: 8
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
   manifests:
     ingress_api: false
     ingress_cfn: false
