--- a/roles/ironic/meta/main.yml
+++ b/roles/ironic/meta/main.yml
@@ -27,6 +27,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: ironic
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: ironic
+      oslo_messaging_notifications_user_name: ironic
   - role: openstacksdk
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
