--- a/roles/ironic/vars/main.yml
+++ b/roles/ironic/vars/main.yml
@@ -65,6 +65,7 @@ _ironic_helm_values:
         inspection_network: "{{ ironic_bare_metal_network_name }}"
         provisioning_network: "{{ ironic_bare_metal_network_name }}"
         rescuing_network: "{{ ironic_bare_metal_network_name }}"
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       pxe:
         kernel_append_params: "ipa-insecure=true systemd.journald.forward_to_console=yes"
       service_catalog:
