--- a/roles/keystone/meta/main.yml
+++ b/roles/keystone/meta/main.yml
@@ -34,6 +34,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: keystone
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: keystone
+      oslo_messaging_notifications_user_name: keystone
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ keystone_helm_chart_path }}"
