--- a/roles/manila/meta/main.yml
+++ b/roles/manila/meta/main.yml
@@ -34,6 +34,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: manila
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: manila
+      oslo_messaging_notifications_user_name: manila
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ manila_helm_chart_path }}"
