--- a/roles/manila/vars/main.yml
+++ b/roles/manila/vars/main.yml
@@ -60,8 +60,7 @@ _manila_helm_values:
         service_image_name: "{{ manila_image_name }}"
         service_instance_flavor_id: "{{ _manila_flavor.flavor.id }}"
         service_instance_security_group: manila-service-security-group
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       nova:
         api_microversion: 2.60
         endpoint_type: internalURL
