--- a/roles/neutron/meta/main.yml
+++ b/roles/neutron/meta/main.yml
@@ -34,6 +34,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: neutron
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: neutron
+      oslo_messaging_notifications_user_name: neutron
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ neutron_helm_chart_path }}"
