--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -58,8 +58,7 @@ __neutron_helm_values:
         region_name: "{{ openstack_helm_endpoints_neutron_region_name }}"
         username: "neutron-{{ openstack_helm_endpoints_neutron_region_name }}"
         password: "{{ openstack_helm_endpoints_neutron_keystone_password }}"
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       service_providers:
         service_provider: VPN:strongswan:neutron_vpnaas.services.vpn.service_drivers.ipsec.IPsecVPNDriver:default
     dhcp_agent:
