--- a/roles/nova/meta/main.yml
+++ b/roles/nova/meta/main.yml
@@ -48,6 +48,10 @@ dependencies:
                 issuerRef:
                   kind: Issuer
                   name: libvirt-vnc
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: nova
+      oslo_messaging_notifications_user_name: nova
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ nova_helm_chart_path }}"
