--- a/roles/nova/vars/main.yml
+++ b/roles/nova/vars/main.yml
@@ -102,8 +102,7 @@ _nova_helm_values:
         swtpm_group: swtpm
       neutron:
         metadata_proxy_shared_secret: "{{ openstack_helm_endpoints['compute_metadata']['secret'] }}"
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       os_vif_ovs:
         ovsdb_connection: unix:/run/openvswitch/db.sock
       privsep_osbrick:
