--- a/roles/placement/vars/main.yml
+++ b/roles/placement/vars/main.yml
@@ -29,8 +29,7 @@ _placement_helm_values:
         max_pool_size: 5
         max_retries: -1
         pool_timeout: 30
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
   manifests:
     ingress: false
     service_ingress: false
