--- a/roles/cinder/meta/main.yml
+++ b/roles/cinder/meta/main.yml
@@ -33,6 +33,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: cinder
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: cinder
+      oslo_messaging_notifications_user_name: cinder
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ cinder_helm_chart_path }}"
