--- a/roles/designate/meta/main.yml
+++ b/roles/designate/meta/main.yml
@@ -33,6 +33,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: designate
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: designate
+      oslo_messaging_notifications_user_name: designate
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ designate_helm_chart_path }}"
