--- a/roles/designate/vars/main.yml
+++ b/roles/designate/vars/main.yml
@@ -25,6 +25,7 @@ _designate_helm_values:
         max_overflow: 50
         max_pool_size: 5
         pool_timeout: 30
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       service:central:
         managed_resource_tenant_id: "{{ _designate_project_info.projects[0].id }}"
     pools: "{{ designate_pools | to_yaml }}"
