--- a/roles/glance/meta/main.yml
+++ b/roles/glance/meta/main.yml
@@ -34,6 +34,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: glance
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: glance
+      oslo_messaging_notifications_user_name: glance
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ glance_helm_chart_path }}"
