--- a/roles/magnum/meta/main.yml
+++ b/roles/magnum/meta/main.yml
@@ -32,6 +32,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: magnum
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: magnum
+      oslo_messaging_notifications_user_name: magnum
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ magnum_helm_chart_path }}"
