--- a/roles/magnum/vars/main.yml
+++ b/roles/magnum/vars/main.yml
@@ -76,6 +76,7 @@ _magnum_helm_values:
       octavia_client:
         endpoint_type: internalURL
         region_name: "{{ openstack_helm_endpoints_octavia_region_name }}"
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
   pod:
     replicas:
       api: 3
