--- a/roles/octavia/meta/main.yml
+++ b/roles/octavia/meta/main.yml
@@ -34,6 +34,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: octavia
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: octavia
+      oslo_messaging_notifications_user_name: octavia
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ octavia_helm_chart_path }}"
