--- a/roles/octavia/vars/main.yml
+++ b/roles/octavia/vars/main.yml
@@ -131,8 +131,7 @@ _octavia_helm_values:
       health_manager:
         controller_ip_port_list: "{{ _octavia_controller_ip_port_list | sort | join(',') }}"
         heartbeat_key: "{{ octavia_heartbeat_key }}"
-      oslo_messaging_notifications:
-        driver: noop
+      oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
       neutron:
         endpoint_type: internalURL
         valid_interfaces: internal
