--- a/roles/oslo_messaging_notifications/meta/main.yml
+++ b/roles/oslo_messaging_notifications/meta/main.yml
@@ -14,7 +14,7 @@
 
 galaxy_info:
   author: VEXXHOST, Inc.
-  description: Ansible role for OpenStack Heat
+  description: Ansible role for oslo_messaging_notifications configuration for OpenStack services
   license: Apache-2.0
   min_ansible_version: 5.5.0
   standalone: false
@@ -30,15 +30,3 @@ galaxy_info:
 
 dependencies:
   - role: defaults
-  - role: openstack_helm_endpoints
-    vars:
-      openstack_helm_endpoints_repo_name: openstack-helm
-      openstack_helm_endpoints_chart: heat
-  - role: oslo_messaging_notifications
-    vars:
-      oslo_messaging_notifications_kafka_topic: heat
-      oslo_messaging_notifications_user_name: heat
-  - role: vexxhost.kubernetes.upload_helm_chart
-    vars:
-      upload_helm_chart_src: "{{ heat_helm_chart_path }}"
-      upload_helm_chart_dest: "{{ heat_helm_chart_ref }}"
