--- a/roles/placement/meta/main.yml
+++ b/roles/placement/meta/main.yml
@@ -33,6 +33,10 @@ dependencies:
   - role: openstack_helm_endpoints
     vars:
       openstack_helm_endpoints_chart: placement
+  - role: oslo_messaging_notifications
+    vars:
+      oslo_messaging_notifications_kafka_topic: placement
+      oslo_messaging_notifications_user_name: placement
   - role: vexxhost.kubernetes.upload_helm_chart
     vars:
       upload_helm_chart_src: "{{ placement_helm_chart_path }}"
