--- a/roles/oslo_messaging_notifications/tasks/main.yml
+++ b/roles/oslo_messaging_notifications/tasks/main.yml
@@ -32,37 +32,55 @@
           segment.bytes: 1073741824
   run_once: true
 
-- name: Ensure a secret for kafka user password
+- name: Set the secret name for oslo_messaging_notifications user password
+  set_fact:
+    _oslo_messaging_notifications_password_secret_name: "oslo-messaging-notifications-{{ oslo_messaging_notifications_user_name | default('default') }}"
+  run_once: true
+
+- name: Ensure secret for oslo_messaging_notifications user password exists
   run_once: true
   block:
-    - name: Set the secret name for oslo_messaging_notifications user password
-      set_fact:
-        _oslo_messaging_notifications_password_secret_name: "oslo-messaging-notifications-{{ oslo_messaging_notifications_user_name | default('default') }}"
-      run_once: true
-
     - name: Check if the secret exists
       kubernetes.core.k8s_info:
         api_version: v1
         kind: Secret
         name: "{{ _oslo_messaging_notifications_password_secret_name }}"
         namespace: openstack
-      register: _oslo_messaging_notifications_password_secret
+      register: __oslo_messaging_notifications_password_secret
       ignore_errors: true
 
-    - name: Create k8s secret for oslo_messaging_notifications user password
-      when: ( _oslo_messaging_notifications_password_secret.resources | length==0 )
-      kubernetes.core.k8s:
-        state: present
-        definition:
-          apiVersion: v1
-          kind: Secret
-          metadata:
-            name: "{{ _oslo_messaging_notifications_password_secret_name }}"
-            namespace: openstack
-          type: Opaque
-          data:
-            password: "{{ lookup('password', '/dev/null length=32 chars=ascii_letters,digits') }}"
+    - name: Create a secret for kafka user password
+      when: ( __oslo_messaging_notifications_password_secret.resources | length==0 )
       run_once: true
+      block:
+        - name: Create k8s secret for oslo_messaging_notifications user password
+          kubernetes.core.k8s:
+            state: present
+            definition:
+              apiVersion: v1
+              kind: Secret
+              metadata:
+                name: "{{ _oslo_messaging_notifications_password_secret_name }}"
+                namespace: openstack
+              type: Opaque
+              stringData:
+                password: "{{ lookup('password', '/dev/null length=32 chars=ascii_letters,digits') }}"
+          run_once: true
+
+- name: Grab oslo messaging notifications user password
+  run_once: true
+  block:
+    - name: Grab oslo messaging notifications user password secret
+      kubernetes.core.k8s_info:
+        api_version: v1
+        kind: Secret
+        name: "{{ _oslo_messaging_notifications_password_secret_name }}"
+        namespace: openstack
+      register: __oslo_messaging_notifications_password_secret
+
+    - name: Cache fact with Percona XtraDB password
+      ansible.builtin.set_fact:
+        oslo_messaging_notifications_password: "{{ __oslo_messaging_notifications_password_secret.resources[0]['data']['password'] | b64decode }}"
 
 - name: Ensure Kafka user for oslo_messaging_notifications
   kubernetes.core.k8s:
