fix password gen
Signed-off-by: okozachenko <okozachenko@vexxhost.com>

--- a/roles/oslo_messaging_notifications/tasks/main.yml
+++ b/roles/oslo_messaging_notifications/tasks/main.yml
@@ -64,7 +64,7 @@
                 namespace: openstack
               type: Opaque
               stringData:
-                password: "{{ lookup('password', '/dev/null length=32 chars=ascii_letters,digits') }}"
+                password: "{{ lookup('password', '/dev/null chars=ascii_lowercase,ascii_uppercase,digits length=32') }}"
           run_once: true
 
 - name: Grab oslo messaging notifications user password
