fix kafka user name and use tls
Signed-off-by: okozachenko <okozachenko@vexxhost.com>

--- a/playbooks/infrastructure.yml
+++ b/playbooks/infrastructure.yml
@@ -42,7 +42,7 @@
 
     - role: kafka_cluster_operator
       tags:
-        - kafka-operator
+        - kafka-cluster-operator
 
     - role: kafka_cluster
       tags:
