--- a/roles/kafka_cluster/tasks/main.yml
+++ b/roles/kafka_cluster/tasks/main.yml
@@ -1,7 +1,7 @@
 # Copyright (c) 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: Apache-2.0
 
-- name: Create kafka node pool
+- name: Create Kafka node pool
   run_once: true
   kubernetes.core.k8s:
     state: present
@@ -27,7 +27,7 @@
               deleteClaim: false
               kraftMetadata: shared
 
-- name: Create kafka cluster
+- name: Create Kafka cluster
   run_once: true
   kubernetes.core.k8s:
     state: present
