--- a/roles/designate/vars/main.yml
+++ b/roles/designate/vars/main.yml
@@ -26,6 +26,7 @@ _designate_helm_values:
         max_pool_size: 5
         pool_timeout: 30
       oslo_messaging_notifications: "{{ oslo_messaging_notifications }}"
+      oslo_messaging_kafka: "{{ oslo_messaging_kafka }}"
       service:central:
         managed_resource_tenant_id: "{{ _designate_project_info.projects[0].id }}"
     pools: "{{ designate_pools | to_yaml }}"
@@ -38,6 +39,34 @@ _designate_helm_values:
       producer: 1
       sink: 3
       worker: 3
+    mounts:
+      designate_api:
+        designate_api:
+          volumeMounts:
+            - name: kafka-ca
+              mountPath: /etc/pki/kafka
+          volumes:
+            - name: kafka-ca
+              secret:
+                secretName: kafka-cluster-cluster-ca-cert
+      designate_central:
+        designate_central:
+          volumeMounts:
+            - name: kafka-ca
+              mountPath: /etc/pki/kafka
+          volumes:
+            - name: kafka-ca
+              secret:
+                secretName: kafka-cluster-cluster-ca-cert
+      designate_worker:
+        designate_worker:
+          volumeMounts:
+            - name: kafka-ca
+              mountPath: /etc/pki/kafka
+          volumes:
+            - name: kafka-ca
+              secret:
+                secretName: kafka-cluster-cluster-ca-cert
   manifests:
     ingress_api: false
     service_ingress_api: false
