--- a/roles/kafka_cluster/meta/main.yml
+++ b/roles/kafka_cluster/meta/main.yml
@@ -3,7 +3,7 @@
 
 galaxy_info:
   author: VEXXHOST, Inc.
-  description: Ansible role for kafka cluster
+  description: Ansible role for Kafka cluster
   license: Apache-2.0
   min_ansible_version: 5.5.0
   standalone: false
