--- a/roles/kafka_cluster/vars/main.yml
+++ b/roles/kafka_cluster/vars/main.yml
@@ -7,20 +7,20 @@ _kafka_cluster_spec:
     image: "{{ atmosphere_images['kafka_cluster'] | vexxhost.kubernetes.docker_image('ref') }}"
     metadataVersion: 4.0-IV3
     listeners:
-      - name: plain
-        port: 9092
-        type: internal
-        tls: false
       - name: tls
         port: 9093
         type: internal
         tls: true
+        authentication:
+          type: scram-sha-512
     config:
       offsets.topic.replication.factor: 3
       transaction.state.log.replication.factor: 3
       transaction.state.log.min.isr: 2
       default.replication.factor: 3
       min.insync.replicas: 2
+    authorization:
+      type: simple
   entityOperator:
     topicOperator: {}
     userOperator: {}
