--- a/roles/oslo_messaging_notifications/tasks/main.yml
+++ b/roles/oslo_messaging_notifications/tasks/main.yml
@@ -115,7 +115,8 @@
   set_fact:
     oslo_messaging_notifications:
       driver: messagingv2
-      transport_url: "kafka://{{ oslo_messaging_notifications_user_name }}:{{ oslo_messaging_notifications_password }}@{{ oslo_messaging_notifications_kafka_url }}/{{ oslo_messaging_notifications_kafka_topic }}"
+      transport_url: "kafka://{{ oslo_messaging_notifications_user_name }}:{{ oslo_messaging_notifications_password }}@{{ oslo_messaging_notifications_kafka_url }}"
+      topics: "{{ oslo_messaging_notifications_kafka_topic }}"
     oslo_messaging_kafka:
       security_protocol: SASL_SSL
       sasl_mechanism: SCRAM-SHA-512
