use prefix patterntype
Signed-off-by: okozachenko <okozachenko@vexxhost.com>

--- a/roles/oslo_messaging_notifications/tasks/main.yml
+++ b/roles/oslo_messaging_notifications/tasks/main.yml
@@ -96,8 +96,9 @@
             - resource:
                 type: topic
                 name: "{{ oslo_messaging_notifications_kafka_topic }}"
-                patternType: literal
+                patternType: prefix
               operations:
+                - Create
                 - Describe
                 - Read
                 - Write
