--- a/molecule/keycloak/prepare.yml
+++ b/molecule/keycloak/prepare.yml
@@ -28,3 +28,5 @@
     - vexxhost.atmosphere.percona_xtradb_cluster_operator
     - vexxhost.atmosphere.percona_xtradb_cluster
     - vexxhost.atmosphere.memcached
+    - vexxhost.atmosphere.kafka_cluster_operator
+    - vexxhost.atmosphere.kafka_cluster
