--- a/roles/kube_prometheus_stack/tasks/main.yml
+++ b/roles/kube_prometheus_stack/tasks/main.yml
@@ -334,6 +334,10 @@
       state: present
     - name: rbd-details
       state: present
+    - name: strimzi-kafka
+      state: present
+    - name: strimzi-kraft
+      state: present
   tags:
     - kube-prometheus-stack-dashboards
 
