--- a/roles/kube_prometheus_stack/vars/main.yml
+++ b/roles/kube_prometheus_stack/vars/main.yml
@@ -585,6 +585,48 @@ _kube_prometheus_stack_helm_values:
         podMetricsEndpoints:
           - port: metrics
             relabelings: *relabelings_instance_to_pod_name
+      - name: strimzi-kafka
+        jobLabel: strimzi.io/kind
+        selector:
+          matchExpressions:
+            - key: "strimzi.io/kind"
+              operator: In
+              values: ["Kafka", "KafkaConnect", "KafkaMirrorMaker2"]
+        namespaceSelector:
+          matchNames:
+            - openstack
+        podMetricsEndpoints:
+        - path: /metrics
+          port: tcp-prometheus
+          relabelings:
+          - separator: ;
+            regex: __meta_kubernetes_pod_label_(strimzi_io_.+)
+            replacement: $1
+            action: labelmap
+          - sourceLabels: [__meta_kubernetes_namespace]
+            separator: ;
+            regex: (.*)
+            targetLabel: namespace
+            replacement: $1
+            action: replace
+          - sourceLabels: [__meta_kubernetes_pod_name]
+            separator: ;
+            regex: (.*)
+            targetLabel: kubernetes_pod_name
+            replacement: $1
+            action: replace
+          - sourceLabels: [__meta_kubernetes_pod_node_name]
+            separator: ;
+            regex: (.*)
+            targetLabel: node_name
+            replacement: $1
+            action: replace
+          - sourceLabels: [__meta_kubernetes_pod_host_ip]
+            separator: ;
+            regex: (.*)
+            targetLabel: node_ip
+            replacement: $1
+            action: replace
   prometheusOperator:
     admissionWebhooks:
       patch:
