ci: fix the ci upgrade pyopenssl task
Change-Id: If8f4e8ad9dd490437a13d05917d5bab2d8e73067
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>

--- a/playbooks/kubernetes.yml
+++ b/playbooks/kubernetes.yml
@@ -45,7 +45,7 @@
       ansible.builtin.pip:
         name:
           - pyopenssl>=22.1.0
-        extra_args: --upgrade
+        extra_args: --upgrade  --ignore-installed
 
 - import_playbook: vexxhost.kubernetes.site
   vars:
