Test fix for the ci
Change-Id: Ic5de8ba05cce487d1221f3039d54da6668ae542b
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>

--- a/playbooks/kubernetes.yml
+++ b/playbooks/kubernetes.yml
@@ -45,7 +45,8 @@
       ansible.builtin.pip:
         name:
           - pyopenssl>=22.1.0
-        extra_args: --upgrade  --ignore-installed
+        extra_args: --upgrade --ignore-installed
+      changed_when: false
 
 - import_playbook: vexxhost.kubernetes.site
   vars:
