--- a/roles/libvirt/vars/main.yml
+++ b/roles/libvirt/vars/main.yml
@@ -43,4 +43,5 @@ _libvirt_helm_values:
     labels:
       include_app_kubernetes_io: false
     sidecars:
-      libvirt_exporter: true
+      libvirt_exporter:
+        enabled: true
