--- a/.charts.yml
+++ b/.charts.yml
@@ -1,4 +1,6 @@
 .common:
+  vexxhost_openstack_helm_repository: &vexxhost_openstack_helm_repository
+    url: https://vexxhost.github.io/openstack-helm
   openstack_helm_repository: &openstack_helm_repository
     url: https://tarballs.openstack.org/openstack-helm
   openstack_helm_infra_repository: &openstack_helm_infra_repository
@@ -116,8 +118,8 @@ charts:
     repository:
       url: https://prometheus-community.github.io/helm-charts
   - name: libvirt
-    version: 0.1.27
-    repository: *openstack_helm_infra_repository
+    version: 1.1.0
+    repository: *vexxhost_openstack_helm_repository
     dependencies: *openstack_helm_dependencies
   - name: loki
     version: 6.6.3
