--- a/roles/libvirt/vars/main.yml
+++ b/roles/libvirt/vars/main.yml
@@ -40,4 +40,5 @@ _libvirt_helm_values:
     role_cert_manager: true
   pod:
     sidecars:
-      libvirt_exporter: true
+      libvirt_exporter:
+        enabled: true
