fix ironic go test
Change-Id: I6c87ca8b4b76abb5bdb15260c0fcda8bca4b3ab7
Signed-off-by: ricolin <rlin@vexxhost.com>
(cherry picked from commit eac4d8b9655d7b273069515691534fb81822e7e7)
Signed-off-by: ricolin <rlin@vexxhost.com>

--- a/roles/ironic/vars/main.yml
+++ b/roles/ironic/vars/main.yml
@@ -63,6 +63,9 @@ _ironic_helm_values:
         kernel_append_params: "ipa-insecure=true systemd.journald.forward_to_console=yes"
       service_catalog:
         valid_interfaces: public
+      database:
+        connection_recycle_time: 600
+        max_pool_size: 5
   pod:
     labels:
       include_app_kubernetes_io: false
