[stable/zed] fix: upgrade libvirt chart to latest [CLOUDOPS-1133] (#3029)
Signed-off-by: Mohammed Naser <mnaser@vexxhost.com>

--- a/roles/libvirt/vars/main.yml
+++ b/roles/libvirt/vars/main.yml
@@ -42,4 +42,5 @@ _libvirt_helm_values:
     labels:
       include_app_kubernetes_io: false
     sidecars:
-      libvirt_exporter: true
+      libvirt_exporter:
+        enabled: true
