Fix senlin upgrade
Change-Id: I9d477e130b943fd2bdd6954aaf895aedf9d41631
Signed-off-by: ricolin <rlin@vexxhost.com>
(cherry picked from commit e35af2dbb539d591b34785203ef04815daf23b49)

--- a/roles/senlin/vars/main.yml
+++ b/roles/senlin/vars/main.yml
@@ -17,6 +17,8 @@ _senlin_helm_values:
   images:
     tags: "{{ atmosphere_images | vexxhost.atmosphere.openstack_helm_image_tags('senlin') }}"
   pod:
+    labels:
+      include_app_kubernetes_io: false
     replicas:
       api: 3
       conductor: 3
