--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,6 +1,6 @@
 namespace: vexxhost
 name: atmosphere
-version: 6.0.0-beta.8
+version: v6.0.0-beta.9
 readme: README.md
 authors:
   - Mohammed Naser <mnaser@vexxhost.com>
