--- a/roles/defaults/defaults/main.yml
+++ b/roles/defaults/defaults/main.yml
@@ -12,7 +12,7 @@
 # License for the specific language governing permissions and limitations
 # under the License.
 
-atmosphere_version: v6.0.0-beta.9
+atmosphere_version: 6.0.0-beta.9
 
 # Ingress
 atmosphere_ingress_class_name: atmosphere
